--- a/loitor_ros_workspace/src/loitor_stereo_visensor/package.xml
+++ b/loitor_ros_workspace/src/loitor_stereo_visensor/package.xml
@@ -47,6 +47,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>camera_info_manager</build_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>message_runtime</run_depend>
@@ -55,6 +56,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>camera_info_manager</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
